Drop out of support netcoreapp2.1 and 3.0 from running on CI

--- a/sample/NpgsqlSample/NpgsqlSample.csproj
+++ b/sample/NpgsqlSample/NpgsqlSample.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <NpgsqlVersion Condition="'$(NpgsqlVersion)'==''">5.0.7</NpgsqlVersion>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net461;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1;net5.0;</TargetFrameworks>
+        <TargetFrameworks>net461;netcoreapp3.1;net5.0;</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
