--- a/sample/Elastic.Apm.AdoNet/Elastic.Apm.AdoNet.csproj
+++ b/sample/Elastic.Apm.AdoNet/Elastic.Apm.AdoNet.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>net461;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1;net5.0;</TargetFrameworks>
+      <TargetFrameworks>net461;netcoreapp3.1;net5.0;</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
