--- a/sample/MySqlDataSample/MySqlDataSample.csproj
+++ b/sample/MySqlDataSample/MySqlDataSample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <MySqlDataVersion Condition="'$(MySqlDataVersion)'==''">8.0.26</MySqlDataVersion>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net461;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1;net5.0;</TargetFrameworks>
+    <TargetFrameworks>net461;netcoreapp3.1;net5.0;</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
