--- a/sample/SqliteSample/SqliteSample.csproj
+++ b/sample/SqliteSample/SqliteSample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <SqliteVersion Condition="'$(SqliteVersion)'==''">5.0.8</SqliteVersion>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net461;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1;net5.0;</TargetFrameworks>
+    <TargetFrameworks>net461;netcoreapp3.1;net5.0;</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
